# queueing_model

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: basics.yaml  basics.yaml.yml  release
source/data_scripts/: queuing_model.py
source/notebooks/: Warteschlangenmodell.ipynb
source/queueing_model/: diurnal_curves.py
source/queuing_model/: diurnal_curves.py  queuing_model.py
tests/: conftest.py  test_queuing_model.py
