[tool.poetry]
name = "queuing-model"
version = "0.1.0"
description = "Scripts to apply queuing models"
authors = ["Matthias Friebel <matthias.friebel@now-gmbh.de>"]
readme = "README.md"
packages = [
  { include = "queuing_model", from = "source" }
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.3"
pytest = "^9.0.2"
pytest-mock = "^3.15.1"
pydantic = "^2.12.5"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
