[tool.poetry]
name = "queuing-model"
version = "0.1.0"
description = "Scripts to apply queuing models"
authors = ["Matthias Friebel <matthias.friebel@now-gmbh.de>"]
readme = "README.md"
packages = [
  { include = "queuing_model", from = "source" }
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.3"
pydantic = "^2.12.5"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
ipykernel = "^7.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-mock = "^3.15.1"
ruff = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
